move some common patterns from Parser classes to Patterns class